[BORN-10] add z-index calc, and repair button style

--- a/app/assets/stylesheets/base/_icons.scss
+++ b/app/assets/stylesheets/base/_icons.scss
@@ -180,3 +180,7 @@ i,
 .crs-icon-cog:before {
   content: "\e994";
 }
+.crs-icon-pencil{
+  transform: rotate(90deg);
+}
+
